tests/shouldfail/RecursiveDatatype.hs
module RecursiveDatatype where

import Clash.Prelude

topEntity :: [Bool]
topEntity = [True]
